Fix Reactome client to point at https://reactome.org because https://www.reactome.org has a self-signed certificate